# kernelridgeclass

./: .gitignore  README.md  dev-requirements.txt  pyproject.toml  setup.py  tox.ini
kernelridgeclass/: __init__.py  _version.py  kernel_ridge.py
kernelridgeclass/tests/: test_ridgeclass.py
